Added jwt autorization(tested with postman)
Added jwt autorization. Tested with postman but not with front-end.
Thanks to:
https://fullstackmark.com/post/13/jwt-authentication-with-aspnet-core-2-web-api-angular-5-net-core-identity-and-facebook-login ;
https://metanit.com/sharp/aspnet5/23.7.php .

--- a/MyToDoApi/appsettings.json
+++ b/MyToDoApi/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TodoApiContext": "Server=(localdb)\\mssqllocaldb;Database=TodoApiContext-8d80ddae-1683-42ae-9072-4a66eb34a474;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtIssuerOptions": {
+    "Issuer": "webApi",
+    "Audience": "http://localhost:4200/"
   }
 }
